syntax = "proto3";

package pb;

enum ERROR_CODE {
  SUCCESS = 0;
  FAILED = 1;
}

enum CSMsgID {
  REQ_BEGIN = 0;
  REQ_LOGIN = 1;
  REQ_HEARTBEAT = 2;
  REQ_SET_USERNAME = 3;
  REQ_ROOM_CHAT = 4;
  REQ_ROOM_LIST = 5;
  REQ_JOIN_ROOM = 6;

  RSP_BEGIN = 100;
  RSP_LOGIN = 101;
  RSP_HEARTBEAT = 102;
  RSP_SET_USERNAME = 103;
  RSP_ROOM_CHAT = 104;
  RSP_ROOM_LIST = 105;
  RSP_JOIN_ROOM = 106;

  NTF_BEGIN = 200;
  NTF_ROOM_MEMBER_ONLINE = 201;
  NTF_ROOM_CHAT = 202;
  NTF_ROOM_CLOSED = 203;
  NTF_HISTROY_MSG = 204;
}

message CSHead {
  CSMsgID MsgID = 1;
  int32   BodyLen = 2;
  bool    IsCompressed = 3;
}

message CSReqBody {
  int64            Seq = 1;
  CSReqLogin       Login = 2;
  CSReqHeartbeat   Heartbeat = 3;
  CSReqSetUsername SetUsername = 4;
  CSReqRoomChat    RoomChat = 5;
  CSReqRoomList    RoomList = 6;
  CSReqJoinRoom    JoinRoom = 7;
}

message CSRspBody {
  int64            Seq         = 1;
  ERROR_CODE       ErrCode     = 2;
  string           ErrMsg      = 3;
  CSRspLogin       Login       = 4;
  CSRspHeartbeat   Heartbeat   = 5;
  CSRspSetUsername SetUsername = 6;
  CSRspRoomChat    RoomChat    = 7;
  CSRspRoomList    RoomList    = 8;
  CSRspJoinRoom    JoinRoom    = 9;
}

message CSNtfBody {
  CSNtfKick             Kick = 1;
  CSNtfRoomMemberOnline RoomMemberOnline = 2;
  CSNtfRoomChat         RoomChat = 3;
  CSNtfRoomClosed       RoomClosed = 4;
  CSNtfHistoryMsg       HistoryMsg = 5;
}

message CSReqLogin {
  string Username = 1;
}

message CSRspLogin {
  int64 RoomID = 1;
  string Username = 2;
}

message CSReqHeartbeat {

}

message CSRspHeartbeat {

}

message CSReqSetUsername {
  string Username = 1;
}

message CSRspSetUsername {

}

message CSReqRoomChat {
  string content = 1;
}

message CSRspRoomChat {

}

message CSReqRoomList {
  int32 MaxRoomCount = 1;
}

message RoomInfo {
  int32 CurrentMemberNum = 1;
  int32 TotalMemberNum = 2;
  int64 RoomID = 3;
}

message CSRspRoomList {
  repeated RoomInfo Rooms = 1;
}

message CSReqJoinRoom {
  int64 RoomID = 1;
  bool CreateNew = 2;
}

message CSRspJoinRoom {

}

message CSNtfKick {

}

message CSNtfRoomMemberOnline {

}

message CSNtfRoomChat {
  string Username = 1;
  string Content  = 2;
}

message CSNtfRoomClosed {

}

message CSNtfHistoryMsg {
  repeated string History = 1;
}


